[package]
name = "void-budi"
description = "Build Data Injector"
version = "1.2.0"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "void_budi"

[dependencies]
simian-council-lib = {git = "https://github.com/slackmagic/simian-council-lib", branch = "master"}
